[tool.poetry]
name = "johanna-soler-proyecto-1"
version = "0.1.0"
description = "Primer proyecto de repositorio para Seminario de Programación de la Maestria en Inteligencia 2024"
authors = ["djsoler <johannasolermine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
